# meego-cellular-matd

./: .gitignore  AUTHORS  Doxyfile.in  Makefile.am  autogen.sh  configure.ac  matd.pc.in
include/: at_command.h  at_dbus.h  at_log.h  at_modem.h  at_rate.h  at_thread.h
plugins/: Makefile.am  basic.c  clock.c  dummy.c  exec.c  input.c  interface.c  keymap.h  shell.c  sysinfo.c  timezone.c  udev.c  uinput.c
plugins/mce/: backlight.c
plugins/ofono/: agps.c  callforwarding.c  callmeter.c  callsettings.c  charset.c  cnti.c  core.c  core.h  gprs.c  modem.c  network.c  ofono.h  sim.c  sms.c  ss.c  vcmgr.c  voicecall.c
plugins/qt/: contacts.cpp
plugins/test/: perf.c  selftest.c  unusable.c
plugins/udev/: dmi.c  power.c
src/: Makefile.am  at_modem.c  basic.c  charset.c  cli.c  commands.c  commands.h  dbus.c  error.c  error.h  helper.c  libmatd.sym  log.c  mainpage.h  parser.c  parser.h  phonebook.c  plugins.c  plugins.h  thread.c
test/: .gitignore  Makefile.am  test-cli  test.c  tests.xml.in
usb/: Makefile.am  acm.c  acm.conf
